filterservice added for communication

--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -6,6 +6,11 @@
         {{ auth.userName }}
     </div>
     <div>
+        <h2>FILTER</h2>
+        <p>Filter: {{ filter }}</p>
+        <!-- Display chart here -->
+      </div>
+    <div>
         <button (click)="sendStateToShell()">sendStateToShell</button>
     </div>
     <div>
