--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 {{ auth.userName }}
 
+<app-filter></app-filter>
+
 <div *ngIf="instance">
   <div *ngIf="instance.onAppStateChanged | async as stringifiedAppState">
     <p>INCOMING FROM MFE 1 ::: {{ stringifiedAppState }}</p>
