--- a/module-federation-plugin-example/projects/shell/src/app/filter/filter.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/filter/filter.component.html
@@ -1,1 +1,1 @@
-<input type="text" (input)="updateFilter($event.target.value)">
+<input type="checkbox" (change)="updateFilter($event.target.checked)">
