--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
@@ -1,15 +1,37 @@
-input[type=text] {
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align items to the left */
+    border: 2px darkred dashed;
+    padding: 20px;
+    color: black;
+  }
+  
+  .item {
+    box-sizing: border-box;
+    text-align: left; /* Align text content to the left */
+    color: black; 
+  }
+  
+  .filter {
+    flex-basis: 100%;
+  }
+
+  .appstate {
+    color: black;
+  }
+  
+  input[type=text] {
     width: 100%;
-    max-width: 400px;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid silver;
     font-size: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
-}
-
-button {
+  }
+  
+  button {
     border: 2px solid silver;
     background-color: white;
     font-size: 16px;
@@ -20,17 +42,13 @@ button {
     margin-bottom: 20px;
     margin-top: 20px;
     cursor: pointer;
-}
-
-button:active {
+  }
+  
+  button:active {
     border-color: black;
-}
-
-#container {
-    border: 2px darkred dashed;
-    padding: 20px;
-}
-
-.top-nav {
+  }
+  
+  .top-nav {
     margin-bottom: 20px;
-}
+  }
+  
