--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -1,20 +1,19 @@
-<div id="container">
-    <div>
-        <img src="../../../assets/angular.png" width="50">
+<div class="container">
+    <div class="item">
+      <img src="../../../assets/angular.png" width="50">
     </div>
-    <div>
-        {{ auth.userName }}
+    <div class="item">{{ auth.userName }}</div>
+    <div class="item filter">
+      <h2>FILTER</h2>
+      <p>Filter: {{ filter }}</p>
+      <!-- Display chart here -->
     </div>
-    <div>
-        <h2>FILTER</h2>
-        <p>Filter: {{ filter }}</p>
-        <!-- Display chart here -->
-      </div>
-    <div>
-        <button (click)="sendStateToShell()">sendStateToShell</button>
+    <div class="item">
+      <button (click)="saveConfiguration()">Save Configuration</button>
     </div>
+    <div class="appstate"> {{ expectedAppState! }}</div>
     <div>
-        {{ expectedAppState! }}
-        <img src="../../../assets/ev.png" width="100%">
+      <img src="../../../assets/ev.png" width="100%">
     </div>
-</div>
+  </div>
+  
