base setup communication

--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
@@ -5,6 +5,7 @@
     border: 2px darkred dashed;
     padding: 20px;
     color: black;
+    position: relative;
   }
   
   .item {
@@ -51,4 +52,5 @@
   .top-nav {
     margin-bottom: 20px;
   }
+
   
