--- a/module-federation-plugin-example/projects/shell/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 80px 20px 20px; 
 }
 
 .navbar {
@@ -35,16 +35,35 @@
 }
 
 .button-container {
-  margin-top: 60px; /* Adjust margin top to account for the fixed navbar height */
   align-self: flex-start; 
 }
 
-.mfe-container {
+.notificatie {
   margin-top: 20px;
+  align-self: flex-start;
+  background-color: orange;
 }
 
 .app-filter {
   align-self: flex-start; /* Align the app-filter component to the left */
+}
+
+button {
+  border: 2px solid silver;
+  background-color: white;
+  font-size: 16px;
+  padding: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.user-name {
+  margin-left: 1400px; /* Push the user name to the right */
+  color: white;
 }
 
 /* Adjust styles as needed */
