added styling and Cart for tasks

--- a/module-federation-plugin-example/projects/shell/src/app/filter/filter.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/filter/filter.component.html
@@ -1,1 +1,1 @@
-<input type="checkbox" (change)="updateFilter($event.target.checked)">
+Mode: <input type="checkbox" (change)="updateFilter($event.target.checked)">
