--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.css
@@ -33,24 +33,31 @@
   }
   
   button {
-    border: 2px solid silver;
-    background-color: white;
     font-size: 16px;
-    padding: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 10px;
+    font-weight: 500;
+    color: #ffffff; /* Text color */
+    background-color: #ffb215; /* Background color */
+    border: 2px solid #d7710a; /* Border color matches background color */
+    border-radius: 8px; /* Rounded corners */
+    padding: 14px 28px; /* Increased padding for better appearance */
     margin-bottom: 20px;
     margin-top: 20px;
     cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition effect */
   }
   
-  button:active {
-    border-color: black;
+  button:hover {
+    background-color: #ffb215; /* Darker background color on hover */
+    border-color: #d7710a; /* Darker border color on hover */
+    color: #ffffff; /* Change text color on hover */
   }
   
   .top-nav {
     margin-bottom: 20px;
+  }
+
+  .filtered-app {
+    background-color: black;
   }
 
   
