--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -1,14 +1,14 @@
-<div class="container">
+<div class="container" [ngClass]="getAppClass()">
     <div class="item">
       <img src="../../../assets/angular.png" width="50">
     </div>
     <div class="item">{{ auth.userName }}</div>
     <div class="item">
-      <button (click)="saveConfiguration()">Save Configuration</button>
+      <button (click)="addTaskToCart()">add Task to Cart</button>
     </div>
     <div class="appstate"> {{ expectedAppState! }}</div>
     <div>
       <img src="../../../assets/ev.png" width="100%">
     </div>
-  </div>
+</div>
   
