--- a/module-federation-plugin-example/projects/shell/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.css
@@ -10,11 +10,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: black; /* Set navbar background color to black */
+  background-color: #333; /* Dark background color */
+  padding: 10px 20px; /* Padding around navbar items */
   display: flex;
   align-items: center;
-  padding: 10px 20px; /* Adjust padding as needed */
-  z-index: 1000; /* Ensure the navbar stays on top of other content */
+  justify-content: space-between; /* Align items at the start and end */
+  list-style-type: none; /* Remove bullet points */
 }
 
 .navbar li {
@@ -30,8 +31,9 @@
 }
 
 .navbar a {
-  color: white; /* Set link color to white */
+  color: #ffffff; /* Text color */
   text-decoration: none; /* Remove default underline */
+  margin-left: 20px; /* Add spacing between navbar items */
 }
 
 .button-container {
@@ -46,24 +48,73 @@
 
 .app-filter {
   align-self: flex-start; /* Align the app-filter component to the left */
+  color: white
 }
 
 button {
-  border: 2px solid silver;
-  background-color: white;
+  font-family: 'Roboto', sans-serif; /* Use Roboto font family */
   font-size: 16px;
-  padding: 10px;
-  padding-left: 40px;
-  padding-right: 40px;
-  border-radius: 10px;
+  font-weight: 500;
+  color: #ffffff; /* Text color */
+  background-color: #ffb215; /* Background color */
+  border: 2px solid #d7710a; /* Border color matches background color */
+  border-radius: 8px; /* Rounded corners */
+  padding: 14px 28px; /* Increased padding for better appearance */
   margin-bottom: 20px;
   margin-top: 20px;
   cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition effect */
+}
+
+button:hover {
+  background-color: #ffb215; /* Darker background color on hover */
+  border-color: #d7710a; /* Darker border color on hover */
+  color: #ffffff; /* Change text color on hover */
 }
 
 .user-name {
-  margin-left: 1400px; /* Push the user name to the right */
+  margin-left: auto; /* Push the user name to the right */
   color: white;
+  list-style-type: none; /* Remove bullet point */
 }
+
+.filtered-app {
+  background-color: black;
+}
+
+.cart-container {
+  position: fixed; /* Use 'fixed' for a cart that stays fixed on the viewport */
+  top: 20px;
+  right: 90px;
+  z-index: 1000; /* Ensure the cart stays on top of ovisibility: hidden; /* Initially hide the cart */
+  transition: visibility 0.3s ease;
+}
+
+.cart-container.show {
+  visibility: visible; /* Show the cart when 'showCart' is true */
+}
+
+.cart {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.cart h2 {
+  margin-top: 0;
+}
+
+.cart ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.cart ul li {
+  margin-bottom: 5px;
+}
+
+
 
 /* Adjust styles as needed */
