--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -1,20 +1,25 @@
-<div class="container">
+<div class="container" [ngClass]="getAppClass()">
   
-  <app-filter class="app-filter"></app-filter>
+  
+  <div class="cart-container">
+    <div class="cart">
+      <h2>Cart</h2>
+      <ul>
+        <li *ngFor="let task of tasks">
+          {{ task.id }} - {{ task.name }} - {{ task.date | date }}
+        </li>
+      </ul>
+    </div>
+  </div>
+  
 
   <div class="button-container">
     <button (click)="loadEmplacement()">Emplacement</button>
   </div>
 
-  <div class="button-container">
+  <!-- <div class="button-container">
     <button (click)="loadConfig()">Load Setting</button>
-  </div>
-
-  <div class="notificatie" *ngIf="instance">
-    <div *ngIf="instance.onAppStateChanged | async as stringifiedAppState">
-      <p>{{ stringifiedAppState }}</p>
-    </div>
-  </div>
+  </div> -->
 
   <div #remoteComponentContainer></div>
 
@@ -22,7 +27,9 @@
     <li><img src="../assets/angular.png" width="50"></li>
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/trains">Trains</a></li>
-    <li class="user-name"><div>{{ auth.userName }}</div></li>
+    <li><app-filter class="app-filter"></app-filter></li>
+    <li class="user-name">{{ auth.userName }}</li>
+  
   </ul>
 
   <router-outlet></router-outlet>
