--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -3,7 +3,7 @@
   
   <div class="cart-container">
     <div class="cart">
-      <h2>Cart</h2>
+      <h2>Cart for {{ auth.userName }}</h2>
       <ul>
         <li *ngFor="let task of tasks">
           {{ task.id }} - {{ task.name }} - {{ task.date | date }}
@@ -21,10 +21,11 @@
 
   <ul class="navbar">
     <li><img src="../assets/angular.png" width="50"></li>
+    <li class="navbar-links">
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/trains">Trains</a></li>
     <li><app-filter class="app-filter"></app-filter></li>
-    <li class="user-name">{{ auth.userName }}</li>
+    <li>
   </ul>
 
   <router-outlet></router-outlet>
