--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -3,7 +3,7 @@
   
   <div class="cart-container">
     <div class="cart">
-      <h2>Cart for {{ auth.userName }}</h2>
+      <h2>Tasks for {{ auth.userName }}</h2>
       <ul>
         <li *ngFor="let task of tasks">
           {{ task.id }} - {{ task.name }} - {{ task.date | date }}
@@ -23,7 +23,7 @@
     <li><img src="../assets/angular.png" width="50"></li>
     <li class="navbar-links">
     <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/trains">Trains</a></li>
+    <li><a routerLink="/emplacement"></a></li>
     <li><app-filter class="app-filter"></app-filter></li>
     <li>
   </ul>
