diverse small changes

--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -20,7 +20,7 @@
   <div #remoteComponentContainer></div>
 
   <ul class="navbar">
-    <li><img src="../assets/angular.png" width="50"></li>
+    <li><img src="../assets/angular.gif" width="50"></li>
     <li class="navbar-links">
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/emplacement"></a></li>
