--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container" [ngClass]="getAppClass()">
   <div class="item">
-    <img src="../../../assets/angular.png" width="50">
+    <img src="../../../assets/angular.gif" width="50">
   </div>
   <div *ngIf="auth.userName" class="item auth">
     {{ auth.userName }}
