--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -23,7 +23,7 @@
     <li><img src="../assets/angular.gif" width="50"></li>
     <li class="navbar-links">
     <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/emplacement"></a></li>
+    <li><a routerLink="/emplacement">Emplacement</a></li>
     <li><app-filter class="app-filter"></app-filter></li>
     <li>
   </ul>
