--- a/module-federation-plugin-example/projects/shell/src/app/app.component.css
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.css
@@ -43,7 +43,7 @@
 .notificatie {
   margin-top: 20px;
   align-self: flex-start;
-  background-color: orange;
+  background-color: rgb(182, 32, 37);
 }
 
 .app-filter {
@@ -56,8 +56,8 @@ button {
   font-size: 16px;
   font-weight: 500;
   color: #ffffff; /* Text color */
-  background-color: #ffb215; /* Background color */
-  border: 2px solid #d7710a; /* Border color matches background color */
+  background-color: rgb(182, 32, 37); /* Background color */
+  border: 2px solid rgb(182, 32, 37); /* Border color matches background color */
   border-radius: 8px; /* Rounded corners */
   padding: 14px 28px; /* Increased padding for better appearance */
   margin-bottom: 20px;
@@ -67,8 +67,8 @@ button {
 }
 
 button:hover {
-  background-color: #ffb215; /* Darker background color on hover */
-  border-color: #d7710a; /* Darker border color on hover */
+  background-color: rgb(200, 12, 18); /* Darker background color on hover */
+  border-color: rgb(200, 12, 18); /* Darker border color on hover */
   color: #ffffff; /* Change text color on hover */
 }
 
