make code more clear

--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="item">
     <input class="input-line" type="text" #taskNameInput placeholder="Add task">
-    <div class="appstate"> {{ expectedAppState! }}</div>
+    <div class="message-from-host"> {{ messageFromHost! }}</div>
     <button (click)="addTaskToCart(taskNameInput.value)">Add task</button>
   </div>
   <div>
