--- a/module-federation-plugin-example/projects/mfe1/src/app/notification-bar/notification-bar.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/notification-bar/notification-bar.component.html
@@ -1,4 +1,4 @@
-<div class="notification" *ngIf="expectedAppState">
-    {{ expectedAppState }}
+<div class="notification" *ngIf="messageFromHost">
+    {{ messageFromHost }}
   </div>
   
