new Angular control flow

--- a/module-federation-plugin-example/projects/mfe1/src/app/notification-bar/notification-bar.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/notification-bar/notification-bar.component.html
@@ -1,4 +1,5 @@
-<div class="notification" *ngIf="messageFromHost">
+@if (messageFromHost) {
+  <div class="notification">
     {{ messageFromHost }}
   </div>
-  
+}
