--- a/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/mfe1/src/app/app.component.html
@@ -2,9 +2,11 @@
   <div class="item">
     <img src="../../../assets/angular.gif" width="50">
   </div>
-  <div *ngIf="auth.userName" class="item auth">
-    {{ auth.userName }}
-  </div>
+  @if (auth.userName) {
+    <div class="item auth">
+      {{ auth.userName }}
+    </div>
+  }
   <div class="item">
     <input class="input-line" type="text" #taskNameInput placeholder="Add task">
     <div class="message-from-host"> {{ messageFromHost! }}</div>
