--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -1,33 +1,41 @@
 <div class="container" [ngClass]="getAppClass()">
-  
-  
+
+
   <div class="cart-container">
     <div class="cart">
       <h2>Tasks for {{ auth.userName }}</h2>
       <ul>
-        <li *ngFor="let task of tasks">
-          {{ task.id }} - {{ task.name }} - {{ task.date | date }}
-        </li>
+        @for (task of tasks; track task) {
+          <li>
+            {{ task.id }} - {{ task.name }} - {{ task.date | date }}
+          </li>
+        }
       </ul>
     </div>
   </div>
-  
+
 
   <div class="button-container">
     <button (click)="loadEmplacement()">Emplacement</button>
   </div>
 
-  
+
+
   <div #remoteComponentContainer></div>
+
+
+
+
+
 
 
 
   <ul class="navbar">
     <li><img src="../assets/angular.gif" width="50"></li>
     <li class="navbar-links">
-    <li><a routerLink="/">Home</a></li>
-    <li><app-filter class="app-filter"></app-filter></li>
-    <li>
-  </ul>
-  
-</div>
+      <li><a routerLink="/">Home</a></li>
+      <li><app-filter class="app-filter"></app-filter></li>
+      <li>
+      </ul>
+
+    </div>
