added cart component

--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -1,36 +1,18 @@
 <div class="container" [ngClass]="getAppClass()">
 
-@defer (on hover; prefetch on timer(5000)) {
-  <div class="cart-container">
-    <div class="cart">
-      <h2>Tasks for {{ auth.userName }}</h2>
-      <ul>
-        @for (task of tasks; track task) {
-        <li>
-          {{ task.id }} - {{ task.name }} - {{ task.date | date }}
-        </li>
-        }
-      </ul>
-    </div>
-  </div>
-} @placeholder() {
-  <!-- try adding "minimum: 100" & playing around with various values -->
-  <!-- explore @placeholder & @loading interactions with various settings -->
-  
-} @loading(minimum 1000) { 
-  <!-- try adding "after 100;" and the @loading block wont be displayed! -->
-  
-} @error {
-  <p class="text-red-500">Something went wrong...<p>
-}
+
+  @defer (on interaction(emplacement)) {
+  <app-cart [tasks]="tasks" [auth]="auth" />
+  }
 
 
-  <div class="button-container">
+  <div class="button-container" #emplacement>
     <button (click)="loadEmplacement()">Emplacement</button>
   </div>
 
-
+  @defer () {
   <div #remoteComponentContainer></div>
+  }
 
 
 
