--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -7,6 +7,10 @@
     <button (click)="loadEmplacement()">Emplacement</button>
   </div>
 
+  <div class="button-container">
+    <button (click)="loadMFE2()">MFE2</button>
+  </div>
+
   
   <div #placeHolder></div>
 
