--- a/module-federation-plugin-example/projects/shell/src/app/app.component.html
+++ b/module-federation-plugin-example/projects/shell/src/app/app.component.html
@@ -7,10 +7,9 @@
     <button (click)="loadEmplacement()">Emplacement</button>
   </div>
 
-  <div class="button-container">
+  <div class="button-container" #emplacement>
     <button (click)="loadMFE2()">MFE2</button>
   </div>
-
   
   <div #placeHolder></div>
 
